Got simple kernel that adds arrays of floats working

--- a/ReductionCpp/ReductionCpp.vcxproj.filters
+++ b/ReductionCpp/ReductionCpp.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Intel_OpenCL_Build_Rules Include="add.cl">
+      <Filter>OpenCL Files</Filter>
+    </Intel_OpenCL_Build_Rules>
+  </ItemGroup>
 </Project>
