--- a/ReductionCpp/ReductionCpp.vcxproj.filters
+++ b/ReductionCpp/ReductionCpp.vcxproj.filters
@@ -23,5 +23,8 @@
     <Intel_OpenCL_Build_Rules Include="add.cl">
       <Filter>OpenCL Files</Filter>
     </Intel_OpenCL_Build_Rules>
+    <Intel_OpenCL_Build_Rules Include="..\..\Ch10_reduction_complete\reduction_complete.cl">
+      <Filter>OpenCL Files</Filter>
+    </Intel_OpenCL_Build_Rules>
   </ItemGroup>
 </Project>
