Now running on each device of each platform

--- a/ReductionCpp/ReductionCpp.vcxproj.filters
+++ b/ReductionCpp/ReductionCpp.vcxproj.filters
@@ -23,7 +23,7 @@
     <Intel_OpenCL_Build_Rules Include="add.cl">
       <Filter>OpenCL Files</Filter>
     </Intel_OpenCL_Build_Rules>
-    <Intel_OpenCL_Build_Rules Include="..\..\Ch10_reduction_complete\reduction_complete.cl">
+    <Intel_OpenCL_Build_Rules Include="reduction.cl">
       <Filter>OpenCL Files</Filter>
     </Intel_OpenCL_Build_Rules>
   </ItemGroup>
