--- a/ReductionCpp/ReductionCpp.vcxproj
+++ b/ReductionCpp/ReductionCpp.vcxproj
@@ -182,8 +182,8 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Intel_OpenCL_Build_Rules Include="..\..\Ch10_reduction_complete\reduction_complete.cl" />
     <Intel_OpenCL_Build_Rules Include="add.cl" />
+    <Intel_OpenCL_Build_Rules Include="reduction.cl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
